# hoofoobot

./: Cargo.toml  README.md
src/: cache.rs  commands.rs  config.rs  database.rs  event.rs  main.rs  score.rs  user.rs
src/commands/: graveyard.rs  gtfo.rs  hello.rs  incr_score.rs  mod.rs  rank.rs  register.rs  set_afk_channel.rs  settings.rs  voice_state.rs
src/pocketbase/: client.rs  manager.rs  mod.rs  records.rs
