[package]
name = "hoofoobot"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.75"
poise = "0.5.7"
shuttle-poise = "0.30.1"
shuttle-runtime = "0.30.1"
shuttle-secrets = "0.30.1"
tracing = "0.1.37"
tokio = { version = "1.33.0", features = ["rt-multi-thread"] }
redis = { version = "0.23.3", features = ["tokio-native-tls-comp", "tokio-comp"] }
humantime = "2.1.0"
futures-util = "0.3.28"
comfy-table = { version = "7.1.0", default-features = false }
